new branch durga and style input box and center box project hear

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,8 +2,8 @@
 <html>
     <head>
          <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
-         <link rel="stylesheet" href="my-style.css">
-          <link rel="stylesheet" href="style-test.css">
+         <link rel="stylesheet" href="center-box-style.css">
+          <link rel="stylesheet" href="input-box-style.css">
     </head>  
     
     <body>
