--- a/views/stylepage.ejs
+++ b/views/stylepage.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
          <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
-         <link rel="stylesheet" href="style-test.css">
+         <link rel="stylesheet" href="input-box-style.css">
     </head>  
     
     <body>
