--- a/public/input-box-style.css
+++ b/public/input-box-style.css
@@ -1,15 +1,22 @@
 
 
-.inpputContainer{
- min-width: 200px;
-   height: 60px;
+.main-inputContainer{
+  min-height: 50px;
    z-index: 10;
-   top: 5px;
-   left: 5px;
+   top: 0px;
+   left: 0px;
    position: relative;
+    min-width: 200px;
+     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+ 
 }
 
-
+.inputContainer{
+   
+}
 .inputBox{
   width: 200px;
     display: inline-block;
@@ -50,5 +57,5 @@
   25%{width:25%}
   50% { width:50%}
   75%{width:75%}
-  100%{width:100%}
+  100%{width:inherit}
 }
