--- a/public/input-box-style.css
+++ b/public/input-box-style.css
@@ -6,17 +6,13 @@
    top: 0px;
    left: 0px;
    position: relative;
-    min-width: 200px;
+  width: 200px;
      display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
- 
-}
+    justify-content: space-around;
+ }
 
-.inputContainer{
-   
-}
 .inputBox{
   width: 200px;
     display: inline-block;
